# numcpp

./: .gitignore  CMakeLists.txt
Testing/Temporary/: CTestCostData.txt
numcpp/: array.hpp  io.hpp  numcpp.hpp  reduce.hpp  shape.hpp  slice.hpp  valarray.hpp
test/: CMakeLists.txt  test_linking  test_linking.cpp
